# CPL-2022-coding

./: CMakeLists.txt
CPL-10-Struct/: CMakeLists.txt  fifa.c  file-management.c  josephus2.c  polynlist.c  string-hash.c
CPL-10-Struct/ll/: ll.c  ll.h
CPL-4-Loops/: CMakeLists.txt  game-of-life.c  life.c  matrix-mult.c  mines.c  sudoku.c  trace.c
CPL-5-Function/: CMakeLists.txt  absolute-prime.c  choosing_cards.c  magic-square.c  next-permutation.c  radix.c  sum.c
CPL-6-Recursion/: CMakeLists.txt  integration.c  max.c  pascal.c  poi.c  tiles.c  triangle.c
CPL-7-Data_Types/: CMakeLists.txt  brackets.c  buddy.c  cuboid.c  pour.c  rotate.c  wine.c
CPL-8-Pointer/: CMakeLists.txt  interpreter.c  parse.c  stringcat.c  substr.c  title.c  tokenizer.c
CPL-Exam-21/: CMakeLists.txt  bsearch.c  gobang.c  sorted.c
computing_basics/: CMakeLists.txt  delete.c  my.c  status_transition.c
networking/: CMakeLists.txt  socket_coding.md  uc-client.c  uc-sever.c
networking/uppercase/: networking.c  networking.h  uc-client.c  uc-server.c
others/: CMakeLists.txt  Inverse2.c  Quick-sort.c  binary_search.c  chart.c  collatz.c  decimal.c  factorial.c  figure.c  flip.c  fuck.c  josephus.c  min.c  obstacle.c  palindrome.c  prime.c  series.c  single.c  stars.c  statistics.c
project-1/: CMakeLists.txt  README.md  calculator.c  dinasour.c
test/: CMakeLists.txt  binary.c
