cmake_minimum_required(VERSION 3.23)
project(clion_code C)

set(CMAKE_C_STANDARD 99)

add_subdirectory(others others)
add_subdirectory(computing_basics computing_basics)
add_subdirectory(CPL-4-Loops CPL-4-Loops)
add_subdirectory(CPL-5-Function CPL-5-Function)
add_subdirectory(CPL-6-Recursion)
add_subdirectory(CPL-7-Data_Types)
add_subdirectory(CPL-8-Pointer)
add_subdirectory(project-1 project-1)
add_subdirectory(CPL-10-Struct CPL-10-Struct)
add_subdirectory(CPL-Exam-21 CPL-Exam-21)



















