add_executable(binary_search binary_search.c)
add_executable(chart chart.c)
add_executable(collatz collatz.c)
add_executable(decimal decimal.c)
add_executable(factorial factorial.c)
add_executable(figure figure.c)
add_executable(flip flip.c)
add_executable(fuck fuck.c)
add_executable(Inverse2 Inverse2.c)
add_executable(josephus josephus.c)
add_executable(main main.c)
add_executable(min min.c)
add_executable(obstacle obstacle.c)
add_executable(stars stars.c)
add_executable(palindrome palindrome.c)
add_executable(prime prime.c)
add_executable(Quick-sort Quick-sort.c)
add_executable(series series.c)
add_executable(single single.c)
add_executable(statistics statistics.c)

